@@ -44,6 +44,7 @@ from segmentbk import *
 from txtentry import *
 from elistctrl import *
 from _filetree import *
+from _filetree import *
 
 # TODO: Delete module entries once all plugins have been updated to not 
 #       import them separately.
